<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AnotherApp</string>
    <string name="edit_hint">Empty note</string>
    <string name="done">Done</string>
    <string name="discard">Discard</string>
    <string name="new_edit_note">New/Edit note</string>
    <string name="new_note">New note</string>
    <string name="add_list">Add list</string>
    <string name="remove_list">Remove list</string>
    <string name="remove_lists">Remove list(s)</string>
    <string name="rename_list">Rename list</string>
    <string name="remove_note">Remove note</string>
    <string name="choose_list">Choose list</string>
    <string name="action_settings">Settings</string>
    <string name="no_lists">You currently have no lists.\nAdd one by pressing the list icon in the actionbar</string>
    <string name="no_notes">This list is currently empty.\nAdd a note by pressing the plus in the actionbar</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_note_dialog">NoteDialogActivity</string>

</resources>